# theCounter

./: .gitignore  ONBOARDING.md  README.md  automateServer.sh  flake.nix  pyproject.toml
theCounter/website/: auth.py
