[project]
name = "theCounter"
version = "1.0.0"
description = "theCounter Website"
readme = "README.md"

# define any Python dependencies
requires-python = ">= 3.12"
dependencies = [
  "Flask>=2.2.2",
  "Flask-Login>=0.6.2",
  "Flask-SQLAlchemy>=3.0.2",
  "Flask-WTF>=1.0.1",
  "apscheduler",
  "requests>=2.28.1",
  "gunicorn>=20.1.0",
  "google-auth-oauthlib>=0.4.1",
  "db>=0.1.1",
  "SQLAlchemy>=1.4.41",
  "Flask-Admin>=1.6.0",
  "google-api-python-client",
  "google-auth-httplib2"
]
# define the CLI executable
# Here, we define the entry point to be the 'main()' function in the module 'app/main.py'
[project.scripts]
cli = "app.main:main"
gunicorn = "gunicorn.app.main:main"
